<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.thkskn.countries.SubActivity">

    <include
        layout="@layout/app_bar"
        android:id="@+id/app_bar"/>

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/cv1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/app_bar"
        card_view:cardCornerRadius="4dp"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/text1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textSize="17sp"
                android:layout_centerHorizontal="true"/>
            <TextView
                android:id="@+id/text2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_version"
                android:layout_below="@id/text1"
                android:textSize="17sp"
                android:layout_centerHorizontal="true"/>
            <TextView
                android:id="@+id/tv_thkskn"
                android:layout_width="wrap_content"
                android:layout_below="@id/text2"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                android:layout_centerHorizontal="true"/>

            <View
                android:id="@+id/divider"
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:background="@color/colorDivider"
                android:layout_below="@id/tv_thkskn"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/feedback"
                android:layout_below="@id/divider"
                android:layout_centerHorizontal="true"
                android:textSize="17sp"/>

        </RelativeLayout>

    </android.support.v7.widget.CardView>


</RelativeLayout>
